test_suite/tests/ui/on-unimplemented/tuple_variant.stderr
error[E0277]: the trait bound `NoImpls: Serialize` is not satisfied
 --> tests/ui/on-unimplemented/tuple_variant.rs:7:12
  |
7 |     S(u32, NoImpls)
  |            ^^^^^^^ the trait `Serialize` is not implemented for `NoImpls`
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `NoImpls` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `_::_serde::ser::SerializeTupleVariant::serialize_field`
 --> $WORKSPACE/serde/src/ser/mod.rs
  |
  |     fn serialize_field<T>(&mut self, value: &T) -> Result<(), Self::Error>
  |        --------------- required by a bound in this associated function
  |     where
  |         T: ?Sized + Serialize;
  |                     ^^^^^^^^^ required by this bound in `SerializeTupleVariant::serialize_field`

error[E0277]: the trait bound `NoImpls: Deserialize<'_>` is not satisfied
 --> tests/ui/on-unimplemented/tuple_variant.rs:7:12
  |
7 |     S(u32, NoImpls)
  |            ^^^^^^^ the trait `Deserialize<'_>` is not implemented for `NoImpls`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `NoImpls` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `next_element`
 --> $WORKSPACE/serde/src/de/mod.rs
  |
  |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
  |        ------------ required by a bound in this associated function
  |     where
  |         T: Deserialize<'de>,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`
